# ChangeLog for sys-devel/gdb-apple
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Nov 2006; Fabian Groffen <grobian@gentoo.org>
  +files/gdb-apple-563-darwin7.patch, +files/gdb-apple-563-no-64bit.patch,
  gdb-apple-563.ebuild, gdb-apple-563.ebuild, gdb-apple-563.ebuild:
  Made gdb-apple-563 compile on Darwin 7.  Added patch for both conditional
  support for features only available in OS X 10.4, and for conditional PPC64
  support for platforms that don't have 64-bits.
