@@ -16,10 +16,14 @@ EBUILD gdb-apple-563.ebuild 1046 RMD160 861a79e21ba5700f4bcd24ee9ed7c4112c65e137
 MD5 b836d60bcd2de66a45d6aec16538d61d gdb-apple-563.ebuild 1046
 RMD160 861a79e21ba5700f4bcd24ee9ed7c4112c65e137 gdb-apple-563.ebuild 1046
 SHA256 94917605cb7bb1e24a976e3b986358da2143438ea9c2126bf4c8858cd5bb88dd gdb-apple-563.ebuild 1046
-MISC ChangeLog 518 RMD160 7f2beca302c2e2b688f4fed3cc0da71697885d35 SHA1 ac023fdfd2b0909de2be278a12afe708a2786b0e SHA256 8758cc6d3e7c56bfed56c55fdca0846a76af2e9ecdbff917d4db6caf700537cd
-MD5 0c3964a42a657bb04a9f827979afa655 ChangeLog 518
-RMD160 7f2beca302c2e2b688f4fed3cc0da71697885d35 ChangeLog 518
-SHA256 8758cc6d3e7c56bfed56c55fdca0846a76af2e9ecdbff917d4db6caf700537cd ChangeLog 518
+MISC ChangeLog 604 RMD160 ee9727332129d269c4bbeb80d6f8ff72db9570df SHA1 0d2e88466675483c881e9bfa1c55b1aa75f3fcfb SHA256 5d9664be6336055a708f2c3a9be36c5fd80a59392ef8531352d2f5294498ce23
+MD5 80a858a8237c00b2e0c85d7cea4a634a ChangeLog 604
+RMD160 ee9727332129d269c4bbeb80d6f8ff72db9570df ChangeLog 604
+SHA256 5d9664be6336055a708f2c3a9be36c5fd80a59392ef8531352d2f5294498ce23 ChangeLog 604
+MISC metadata.xml 158 RMD160 61ad495b84df949a636009d30b8c3af6d267e469 SHA1 cacd49ab85e7648a81e5dd4791ef9598090ee63d SHA256 6a21555efc71392966785841abafc9b2984d97d75ad574d654db6adc8674b1bd
+MD5 d601a73b745a43c5cd619bc2b936b5e2 metadata.xml 158
+RMD160 61ad495b84df949a636009d30b8c3af6d267e469 metadata.xml 158
+SHA256 6a21555efc71392966785841abafc9b2984d97d75ad574d654db6adc8674b1bd metadata.xml 158
 MD5 780d57c1d3bf6ded79b549d2463fe77c files/digest-gdb-apple-477 229
 RMD160 f73675c715e1b554e7c9770e24b1468a2f291ba9 files/digest-gdb-apple-477 229
 SHA256 1f248d9cea7fd7b22fe1adef6b0d3049d7d0fb732c87682f06dc723f193792e9 files/digest-gdb-apple-477 229
